Working version 1.21.1
Co-authored-by: SuperTuxii <123881249+supertuxii@users.noreply.github.com>